[gd_scene load_steps=12 format=2]

[ext_resource path="res://Buildings/Factories/Factory.gd" type="Script" id=1]
[ext_resource path="res://Buildings/Furnitures/Stockpile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Process/justbugers.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/heavy.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/coin.png" type="Texture" id=5]
[ext_resource path="res://Assets/Models/BurgerKitchen/burgerkitchen.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=3]
resource_name = "Cycle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visual:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.05, 1.05, 1.05 ), Vector3( 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.1, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Popup"
tracks/0/type = "value"
tracks/0/path = NodePath("Visual:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector3( 0, -4, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visual:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "CoinUp"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("MoneyEffect/MoneyGeneratedSprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.4, 0 ), Vector3( 0, 3, 0 ), Vector3( 0, 3, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MoneyEffect/MoneyGeneratedSprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.1, 0.1, 0.1 ), Vector3( 1, 1, 1 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MoneyEffect/MoneyGeneratedSprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.4, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MoneyEffect/MoneyGeneratedSprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[node name="BurgerKitchen" type="Spatial"]
script = ExtResource( 1 )
display_name = "Burger Kitchen"
np_animation_player = NodePath("AnimationPlayer")
np_money_animation_player = NodePath("MoneyEffect/MoneyAnimationPlayer")
np_input_stockpile = NodePath("Stockpiles/Input")
np_output_stockpile = NodePath("Stockpiles/Output")
np_warning_no_input_sprite_3D = NodePath("Warnings/WarningNoInputSprite3D")
np_warning_no_output_space_sprite_3D = NodePath("Warnings/WarningNoOutputSpaceSprite3D")
cycle_unpaid_delay_warning = 2.0
cycle_duration = 1.0
cycle_money_generation = 25

[node name="Visual" type="Spatial" parent="."]

[node name="burgerkitchen" parent="Visual" instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Cycle = SubResource( 3 )
anims/Popup = SubResource( 11 )
anims/RESET = SubResource( 4 )

[node name="Warnings" type="Spatial" parent="."]

[node name="WarningNoInputSprite3D" type="Sprite3D" parent="Warnings"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0 )
visible = false
billboard = 1
texture = ExtResource( 3 )

[node name="WarningNoOutputSpaceSprite3D" type="Sprite3D" parent="Warnings"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0 )
visible = false
billboard = 1
texture = ExtResource( 4 )

[node name="MoneyEffect" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )

[node name="MoneyGeneratedSprite3D" type="Sprite3D" parent="MoneyEffect"]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.4, 0 )
billboard = 1
texture = ExtResource( 5 )

[node name="MoneyAnimationPlayer" type="AnimationPlayer" parent="MoneyEffect"]
root_node = NodePath("../..")
anims/CoinUp = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="Stockpiles" type="Spatial" parent="."]

[node name="Input" parent="Stockpiles" instance=ExtResource( 2 )]
transform = Transform( 0.0312881, 0, 0.99951, 0, 1, 0, -0.99951, 0, 0.0312881, -2.79957, 0, 0.229779 )
import = true
cargo_type = "meat"

[node name="Output" parent="Stockpiles" instance=ExtResource( 2 )]
transform = Transform( 0.999728, 0, -0.0233151, 0, 1, 0, 0.0233151, 0, 0.999728, 0.52061, -4.76837e-07, 2.10569 )
cargo_type = "burger"

[connection signal="input_event" from="Visual/burgerkitchen/burgerkitchen/StaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_entered" from="Visual/burgerkitchen/burgerkitchen/StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="Visual/burgerkitchen/burgerkitchen/StaticBody" to="." method="_on_StaticBody_mouse_exited"]
[connection signal="animation_finished" from="MoneyEffect/MoneyAnimationPlayer" to="." method="_on_MoneyAnimationPlayer_animation_finished"]
[connection signal="NewCargo" from="Stockpiles/Input" to="." method="_on_Input_NewCargo"]

[editable path="Visual/burgerkitchen"]
